tests/miniJava/neg/004223_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { { } } } class java { class java { public static void Main ( String [ ] java ) { { } } } int [] java ; }
